# SmartHouse

./: .gitignore  bash.exe.stackdump  main.py  pyproject.toml
.claude/: settings.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/boobiki/app/: BoobikiService.kt  MainActivity.kt  ServerUrlActivity.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/layout/: activity_main.xml  activity_server_url.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: architecture.md  installation.md  project description
just-works-main/: .mcp.json  .mcp.json.default  AGENTS.md  CLAUDE.md  bmad-workflow-flows.md  install.bat  install.sh
just-works-main/.claude/: statusline-command.sh
just-works-main/.claude/agents/: frontend-code-writer.md  prompt-writer.md  python-code-writer.md  swift-code-writer.md
just-works-main/.claude/skills/gemini-3-prompting/: SKILL.md
just-works-main/.codex/config/azure/: config.toml
just-works-main/docs/: architecture.md  mission.md  tech-stack.md
src/boobiki/: app.py  config.py  devices.py  discovery.py  logging_config.py  models.py  push.py  transfers.py  ws.py
src/boobiki/routes/: devices.py  health.py  push.py  transfers.py  ws.py
static/: app.js  index.html  manifest.json  style.css  sw.js
