[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boobiki"
version = "0.1.0"
description = "Personal LAN device hub for WiFi network interactions"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "zeroconf>=0.146",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
